--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <h3 class=" education__title resume__title">EDUCATION</h3>
       <ul class="timeline">
         <li>
-          <h4> Master Degree's International Business Management</h4>
+          <h4> Master Degree's in International Business Management</h4>
           <p class="time"> Business school Cesci PARIS <br>
             Date: September 2011
           </p>
