--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
       <h3 class=" education__title resume__title">EDUCATION</h3>
       <ul class="timeline">
         <li>
+            <h4>Degree in web and mobile development (ongoing)</h4>
+          <p class="time">Pop School Digital Training Center France <br>
+            Date: Since 2019
+          </p>
+          <p> Intensive full time web development training focus on Front end and back end.
+
+          </p>
+
+        </li>
+        <li>
           <h4> Master Degree's in International Business Management</h4>
           <p class="time"> Business school Cesci PARIS <br>
             Date: September 2011
@@ -165,16 +175,6 @@
           <p>Intensive course related to French Language Teaching Skills</p>
 
         </li>
-
-        <li>
-          <h4> Bachelor Degree's in Tourism</h4>
-          <p>International business related to travel agencies <br>
-            International customs regulations<br>
-            Travel agency Marketing.<br></p>
-          <p>University of Lille
-            Date: July 2000</p>
-
-        </li>
       </ul>
     </div>
   </div>
@@ -198,32 +198,33 @@
 
 
       </div>
-      <div class="contact" id="reach">
+      <div class="col-md-12  ">
+        <div class="contact" id="reach">
 
-        <div>
+          <div class="col-lg-4 col-sm-12">
 
-          <a href="tel:+33642997291">
-            <i class="fas fa-phone-square icon__contact" id="phone"></i>
-            <p>My phone number:<br> +33 6 42 99 72 91</p>
+            <a href="tel:+33642997291">
+              <i class="fas fa-phone-square icon__contact" id="phone"></i>
+              <p>My phone number:<br> +33 6 42 99 72 91</p>
 
-          </a>
-        </div>
+            </a>
+          </div>
 
-        <div>
-          <i class="fas fa-home icon__contact" id="house"></i>
-          <p>My address<br> 102 avenue de la verrerie<br>62410 Wingles</p>
-        </div>
+          <div class="col-lg-4 col-sm-12">
+            <i class="fas fa-home icon__contact" id="house"></i>
+            <p>My address<br> 102 avenue de la verrerie<br>62410 Wingles</p>
+          </div>
 
 
-        <div>
-          
+          <div class="col-lg-4 col-sm-12">
 
-          <a href="mailto:mcotter@hotmail.fr">
+
+            <a href="mailto:mcotter@hotmail.fr">
               <i class="far fa-envelope icon__contact" id="envelope"></i>
-            <p>My email<br>mcotter@hotmail.fr</p>
-          </a>
+              <p>My email<br>mcotter@hotmail.fr</p>
+            </a>
+          </div>
         </div>
-
 
       </div>
     </div>
