--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="user__box">
 
         <h1> Malika Cotter</h1>
-        <p class="job__title"> Front End Developer</p>
+        <p class="job__title"> Developpeur Front End</p>
       </div>
     </div>
   </section>
@@ -29,37 +29,37 @@
   </div>
 
 
-  <section class="user__info">
-    <div class="nav__bar">
-      <nav class="navbar navbar-expand-lg">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">ABOUT ME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#work">WORK EXPERIENCE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#extraskills">SKILLS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#reach">CONTACT</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+  <section class="user__info nav__bar">
+    <!-- <div class="nav__bar"> -->
+    <nav class="navbar navbar-expand-lg">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">ACCUEIL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">MON PROFIL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work">MON PARCOURS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#extraskills">MES COMPETENCES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#reach">ME CONTACTER</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- </div> -->
   </section>
 
-
+  .
   <div class=" container About container__about" id="about">
 
 
@@ -80,10 +80,10 @@
 
     <div class="me">
 
-      <p>French native speaker with English fluency graduated with a master’s degree in international
-        business.<br> Currently reskilling in the digital field, I possess 12 years of project management
-        experience.<br>I am
-        Looking to relocate abroad in order to pursue a career in the front end of the development Industry.</p>
+      <p> Passionnée par les métiers du numérique, j'ai décidé de donner une nouvelle orientation à ma carrière
+        professionnelle.<br>
+        Après une expérience significative en gestion de projets, je me forme actuellement au métier de développeur
+        Front End.<br>
     </div>
 
 
@@ -95,36 +95,43 @@
       <h3 class="experience__title resume__title">WORK EXPERIENCE</h3>
       <ul class="timeline">
         <li>
-          <h4> Production Manager</h4>
-          <p class="time">Company Name: Brady France<br>
-            Date: From March 2014 to June 2015<br></p>
-          Supervise daily Customer Service operations for France<br>
-          Develop and implement policies and procedures <br>Provide ongoing training<br>
-          Manage the master data department for France, Belgium and Holland</p>
-
-
-          </p>
+          <h4> Responsable service client</h4>
+          <p class="time">Nom de la société: Brady France<br>
+            date:de mars 2014 à juin 2015<br>
+            <p>Management d’une équipe commerciale de vente en ligne en B to B.<br>
+              Garant des Objectifs de qualité du service client.<br>
+              Monitoring, coaching et évaluations des équipes front office et back office<br>
+              Management du service Master Data France, Benelux, Espagne et Suède <br>
+            </p>
         </li>
 
         <li>
-          <h4> Customer service Manager</h4>
-          <p class="time">Company name: Carglass France<br>
-            Date: From: July 2006 to December 2011.</p>
-          <p> Manage the daily customer service operations<br>
-            Project Manager in the implementation of Avaya furthering of our business improvement<br>
-            Responsible for the profitability of the customer contact center (150 employees)<br>
-            Best practice exchange within the group branches (US, Canada, Holland, UK)<br>
+          <h4> Chef de Projet centre de contact client</h4>
+          <p class="time">Nom de la société: Carglass France<br>
+            Date: de juillet 2006 à décembre 2011.<br>
+            <p>Mise en place d’une nouvelle structure téléphonique pour 500
+              collaborateurs (Avaya)<br>
 
-          </p>
+              Implémentation d’un centre d’appels à Montréal, audit, organisation des services et mise en
+              place d’indicateurs de suivi de l'activité front Office clients.<br>
+
+              Organisation et optimisation de la production sur 3 centres de contact client.<br>
+              Analyse de la performance et préconisation d’amélioration.<br>
+
+            </p>
         </li>
 
+
         <li>
-          <h4> Outsoursing Manager</h4>
-          <p class="time">Company Name: Telecom Italia<br>
-            Date: From April 2004 to June 2006</p>
-          <p>Responsible for the operation of customer contact centers in Morocco, Romania and Italy<br>
-            Analyse the KPI and suggest improvements<br>
-            Management of Quality monitoring and contractual commitments.<br>
+          <h4> Responsable Outsourcing</h4>
+          <p class="time">Nom de la société: Telecom Italia<br>
+            Date: d'avril 2004 à juin 2006</p>
+          <p>Responsable de la production de 3 centres de contacts clients offshore<br>
+            Maroc 600 collaborateurs, Roumanie 200 collaborateurs et Italie 150 collaborateurs<br>
+            Pilotage dans une relation transversale de l’ensemble des fonctions<br>
+            Mise en place de comités de pilotages et actions correctives appropriées.<br>
+            Suivi et analyse des reportings d'activité.</p>
+
 
           </p>
         </li>
@@ -132,47 +139,50 @@
     </div>
 
     <div class="col-md-6">
-      <h3 class=" education__title resume__title">EDUCATION</h3>
+      <h3 class=" education__title resume__title">FORMATION</h3>
       <ul class="timeline">
         <li>
-            <h4>Degree in web and mobile development (ongoing)</h4>
-          <p class="time">Pop School Digital Training Center France <br>
-            Date: Since 2019
+          <h4>Actuellement en formation développeur web</h4>
+          <p class="time">Pop School lens <br>
+            Date: depuis 2019
           </p>
-          <p> Intensive full time web development training focus on Front end and back end.
+          <p> Cours intensif en développement Front end et back end.<br>
+              Languages: html, css, Javascrip,bootstrap,php, Mysql.<br>
+              Réalisation d'un site web pour un Spa.<br>
+              Conception d'un site web pour une association ( en cours de réalisation)
 
-          </p>
-
-        </li>
-        <li>
-          <h4> Master Degree's in International Business Management</h4>
-          <p class="time"> Business school Cesci PARIS <br>
-            Date: September 2011
-          </p>
-          <p> Focus on Marketing, International Business and Project Management.<br>
-            Internship in Chiang Mai Thailand</b>
+             
           </p>
 
         </li>
-
-        <li>
-          <h4>TEFL and Tesol Certification</h4>
-          <p class="time">ITT English<br>
-            Date: July 2016</p>
-          <p> Teach English as a Foreign or second language<br>
-            120 hours intensive course.<br>
-
-          </p>
-
-
-        </li>
-
         <li>
           <h4>Enseigner le Français Langue Etrangère </h4>
           <p class="time"> Alliance Française Vichy France<br>
             Date: July 2017</p>
 
-          <p>Intensive course related to French Language Teaching Skills</p>
+          <p> Cours intensif sur l'enseignement de la langue Française</p>
+
+        </li>
+
+
+        <li>
+          <h4>TEFL et Tesol </h4>
+          <p class="time">ITT English<br>
+            Date: Juillet 2016</p>
+          <p> Diplome de l'enseignement de la langue Anglaise.
+          </p>
+
+
+        </li>
+
+        <li>
+          <h4> Master II Management des Affaires Internationales</h4>
+          <p class="time"> Ecole de commerce international Cesci PARIS <br>
+            Date: Septembre 2011
+          </p>
+          <p> Cours centrés sur le Marketing, le commerce international et la gestion de projets.<br>
+             Stage éffectué à l'international: Thailande</b>
+          </p>
 
         </li>
       </ul>
@@ -188,12 +198,10 @@
       <div class="details">
 
         <ul class="main__skills">
-          <li> Strong fonctional knowledge of Front End Development.</li>
-          <li> Excellent communication skills.</li>
-          <li> The ability to work well in teams.</li>
-          <li> Confidence and good business sense.</li>
-          <li> Excellent language skills in French and English</li>
-          <li> A strong customer focus.</li>
+          <li> Bonnes connaissances techniques en developpement front end.</li>
+          <li> Bilingue Anglais Français.</li>
+          <li> Très bonne adaptabilité.</l>
+          <li>Expertise de la relation clients.</li>
         </ul>
 
 
