--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="user__box">
 
         <h1> Malika Cotter</h1>
-        <p class="job__title"> Developpeur Front End</p>
+        <p class="job__title"> Développeur Front End</p>
       </div>
     </div>
   </section>
@@ -92,7 +92,7 @@
   <div class="resume container d-flex flex-wrap pb-4" id="work">
 
     <div class="col-md-6 pb-3">
-      <h3 class="experience__title resume__title">WORK EXPERIENCE</h3>
+      <h3 class="experience__title resume__title">EXPERIENCE PROFESSIONNELLE</h3>
       <ul class="timeline">
         <li>
           <h4> Responsable service client</h4>
@@ -213,14 +213,14 @@
 
             <a href="tel:+33642997291">
               <i class="fas fa-phone-square icon__contact" id="phone"></i>
-              <p>My phone number:<br> +33 6 42 99 72 91</p>
+              <p>Téléphone:<br> +33 6 42 99 72 91</p>
 
             </a>
           </div>
 
           <div class="col-lg-4 col-sm-12">
             <i class="fas fa-home icon__contact" id="house"></i>
-            <p>My address<br> 102 avenue de la verrerie<br>62410 Wingles</p>
+            <p>Adresse<br> 102 avenue de la verrerie<br>62410 Wingles</p>
           </div>
 
 
@@ -229,7 +229,7 @@
 
             <a href="mailto:mcotter@hotmail.fr">
               <i class="far fa-envelope icon__contact" id="envelope"></i>
-              <p>My email<br>mcotter@hotmail.fr</p>
+              <p>Email<br>mcotter@hotmail.fr</p>
             </a>
           </div>
         </div>
