--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="col-md-12  ">
         <div class="contact" id="reach">
 
-          <div class="col-lg-4 col-sm-12">
+          <div class="col-lg-3 col-sm-12">
 
             <a href="tel:+33642997291">
               <i class="fas fa-phone-square icon__contact" id="phone"></i>
@@ -218,19 +218,22 @@
             </a>
           </div>
 
-          <div class="col-lg-4 col-sm-12">
+          <div class="col-lg-3 col-sm-12">
             <i class="fas fa-home icon__contact" id="house"></i>
             <p>Adresse<br> 102 avenue de la verrerie<br>62410 Wingles</p>
           </div>
 
 
-          <div class="col-lg-4 col-sm-12">
+          <div class="col-lg-3 col-sm-12">
 
 
             <a href="mailto:mcotter@hotmail.fr">
               <i class="far fa-envelope icon__contact" id="envelope"></i>
               <p>Email<br>mcotter@hotmail.fr</p>
             </a>
+          </div>
+          <div class="col-lg-3 col-sm-12">
+            <a href="cv_malika.pdf">CV Malika Cotter</a> 
           </div>
         </div>
 
