--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <div class="services" id="extraskills">
     <div class="container">
-      <p class="skills">My Skills</p>
+      <p class="skills">Mes compétences</p>
 
 
       <div class="details">
